--- a/devcontainer.json
+++ b/devcontainer.json
@@ -10,6 +10,7 @@
     "ghcr.io/devcontainers/features/github-cli:1": {},
     "ghcr.io/devcontainers/features/nvidia-cuda:1": {
       "installCudnn": true,
+      "version": "12.2.1"
     },
     "ghcr.io/robbert229/devcontainer-features/postgresql-client:1": {},
     "ghcr.io/devcontainers-extra/features/vscode-server:1": {}
