Tidy up unnecessary additions

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -13,14 +13,19 @@ ENV CUDA_VERSION=11.2 \
 RUN curl -O https://developer.download.nvidia.com/compute/cuda/repos/debian10/x86_64/cuda-keyring_1.1-1_all.deb && \
     dpkg -i cuda-keyring_1.1-1_all.deb && \
     rm cuda-keyring_1.1-1_all.deb && \
-    apt-get update && \
+    rm -rf /var/lib/apt/lists/*
+
+# Install CUDA
+RUN apt-get update && \
     apt-get install -y --no-install-recommends \
     cuda-libraries-11-2 && \
-    curl -O https://developer.download.nvidia.com/compute/redist/cudnn/v8.1.0/Ubuntu20_04-x64/libcudnn8_8.1.0.77-1+cuda11.2_amd64.deb && \
+    rm -rf /var/lib/apt/lists/*
+
+# Install cuDNN
+RUN curl -O https://developer.download.nvidia.com/compute/redist/cudnn/v8.1.0/Ubuntu20_04-x64/libcudnn8_8.1.0.77-1+cuda11.2_amd64.deb && \
     dpkg -i libcudnn8_8.1.0.77-1+cuda11.2_amd64.deb && \
     rm libcudnn8_8.1.0.77-1+cuda11.2_amd64.deb && \
-    rm -rf /var/lib/apt/lists/* && \
-    ldconfig
+    rm -rf /var/lib/apt/lists/*
 
 # Install system dependencies and dev tools
 RUN apt-get update && apt-get install -y \
